@@ -5,7 +5,6 @@ import com.spinyowl.spinygui.core.parser.impl.css.parser.antlr.CSS3Parser.Declar
 import com.spinyowl.spinygui.core.style.stylesheet.Declaration;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -18,9 +17,6 @@ public class PropertyListVisitor extends CSS3BaseVisitor<List<Declaration>> {
 
   @Override
   public List<Declaration> visitDeclarationList(DeclarationListContext ctx) {
-    return ctx.declaration().stream()
-        .map(propertyVisitor::visit)
-        .filter(Objects::nonNull)
-        .collect(Collectors.toList());
+    return ctx.declaration().stream().map(propertyVisitor::visit).filter(Objects::nonNull).toList();
   }
 }
